--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,10 +5,14 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
 </head>
-<body>
-
-<%= yield %>
-
-</body>
+<header class="navbar">
+  <div class="container">
+   <h1>Library</h1>
+  </div>
+</header>
+<div class="container">
+  <%= yield %>
+</div>
 </html>
