most of UI done

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,12 +7,15 @@
   <%= csrf_meta_tags %>
 
 </head>
-<header class="navbar">
+
+<header class="header">
   <div class="container">
    <h1>Library</h1>
   </div>
 </header>
+<body background="http://static.tumblr.com/bf4c92b6b9b217d3cf76e8ca51aefc00/xyrewae/rCRmvhg5w/tumblr_static_library-background4.jpg">
 <div class="container">
   <%= yield %>
 </div>
+</body>
 </html>
