--- a/app/views/admins/_form.html.erb
+++ b/app/views/admins/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="container" align="center">
 <%= form_for(@admin) do |f| %>
   <% if @admin.errors.any? %>
     <div id="error_explanation">
@@ -13,33 +14,34 @@
 
   <div class="field">
     <%= f.label :fname %><br>
-    <%= f.text_field :fname %>
+    <%= f.text_field :fname, class=>'textbox1' %>
   </div>
   <div class="field">
     <%= f.label :lname %><br>
-    <%= f.text_field :lname %>
+    <%= f.text_field :lname, class=>'textbox1' %>
   </div>
   <div class="field">
     <%= f.label :email %><br>
-    <%= f.text_field :email %>
+    <%= f.text_field :email, class=>'textbox1' %>
   </div>
   <div class="field">
     <%= f.label :password %><br>
-    <%= f.password_field :password %>
+    <%= f.password_field :password, class=>'passwordbox1' %>
   </div>
   <div class="field">
     <%= f.label :password_confirmation %><br>
-    <%= f.password_field :password_confirmation %>
+    <%= f.password_field :password_confirmation, class=>'passwordbox1' %>
   </div>
   <div class="field">
     <%= f.label :sec_que %><br>
-    <%= f.text_field :sec_que %>
+    <%= f.text_field :sec_que, class=>'textbox1' %>
   </div>
   <div class="field">
     <%= f.label :ans %><br>
-    <%= f.text_field :ans %>
+    <%= f.text_field :ans, class=>'textbox1' %>
   </div>
   <div class="actions">
     <%= f.submit %>
   </div>
+      </div>
 <% end %>
