--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,3 +1,4 @@
+<div class="container" align="center">
 <%= form_for(@book) do |f| %>
   <% if @book.errors.any? %>
     <div id="error_explanation">
@@ -13,22 +14,23 @@
 
   <div class="field">
     <%= f.label :isbn %><br>
-    <%= f.text_field :isbn %>
+    <%= f.text_field :isbn, class=>'textbox1'%>
   </div>
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.text_field :title, class=>'textbox1' %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :description %>
+    <%= f.text_area :description, class=>'textbox1' %>
   </div>
   <div class="field">
     <%= f.label :author %><br>
-    <%= f.text_field :author %>
+    <%= f.text_field :author, class=>'textbox1' %>
   </div>
     
   <div class="actions">
     <%= f.submit %>
   </div>
+      </div>
 <% end %>
