--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
+<p align="right"><%= link_to "Sign out", signout_path%></p>
+<div class ="container" align="center">
 <h1>Welcome
 <%=session[:user]['email']%>
 <%=session[:password]%>
@@ -11,7 +13,7 @@ to the Library</h1>
 </ul>
 
 
-<p><%= link_to "Sign out", signout_path %></p>
+
 
 <!%= form_for :search, url: search_path do |f| %>
   <!p>
@@ -21,11 +23,11 @@ to the Library</h1>
   <!/p>
 <!% end %>
 
-<%= form_tag("/search", method: "get") do %>
-  <!%= label_tag(:query, "Search for:") %>
-  <%= text_field_tag(:search) %>
-  <%= submit_tag("Search") %>
-<% end %>
+  <form action="/search" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
+    <!%= label_tag(:query, "Search for:") %>
+    <input type="text" name="search" id="search" class="textbox1" />
+    <input type="submit" name="commit" value="Search" />
+  </form>
 
 <% if !isadmin %>
 
@@ -64,4 +66,5 @@ to the Library</h1>
 <% if isadmin %>
 <h3><%= link_to 'Manage Admins/Users', users_path %></h3>
 <h3><%= link_to 'Manage Books', books_path %></h3>
+    </div>
 <%end%>
