--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,4 +1,5 @@
-<h1>Welcome 
+<div align="center">
+<h1>Welcome
 <%[:search]%>
 </h1>
 
@@ -57,3 +58,4 @@
 <%= link_to 'New Book', new_book_path %> | 
 <% end %>
 <%= link_to 'Back', '/' %>
+    </div>
