--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -31,6 +31,6 @@
   <div class="actions">
     <%= f.submit %>
   </div>
-  <%=link_to "back", new_session_url%>
+  <%= link_to 'Done', home_index_path,:style => "color:#0000FF" %>
 </div>
 <% end %>
