--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -14,23 +14,25 @@
 
   <div class="field">
     <%= f.label :isbn %><br>
-    <%= f.text_field :isbn, class=>'textbox1'%>
+    <%= f.text_field :isbn, :class=>"textbox1"%>
   </div>
   <div class="field">
     <%= f.label :title %><br>
-    <%= f.text_field :title, class=>'textbox1' %>
+    <%= f.text_field :title, :class=>"textbox1"%>
   </div>
   <div class="field">
     <%= f.label :description %><br>
-    <%= f.text_area :description, class=>'textbox1' %>
+    <%= f.text_area :description, :class=>"textbox1"%>
   </div>
   <div class="field">
     <%= f.label :author %><br>
-    <%= f.text_field :author, class=>'textbox1' %>
+    <%= f.text_field :author, :class=>"textbox1"%>
   </div>
     
   <div class="actions">
     <%= f.submit %>
   </div>
+      <%= link_to 'Back', books_path %>
       </div>
+
 <% end %>
