--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,4 @@
+<div class="container" align="center">
 <p id="notice"><%= notice %></p>
 
 <p>
@@ -55,3 +56,4 @@
     <%end%>
     <%end%>
 <%= link_to 'Home', root_path %>
+</div>
