--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,10 +1,24 @@
-<h1>Editing User</h1>
+<div class="btn-group btn-group-justified" role="group" aria-label="...">
+
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default"><%= link_to 'Home ', home_index_path %></button>
+  </div>
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default"><%= link_to 'View/Edit Profile ', edit_user_path(@user) %></button>
+  </div>
+  <%if isadmin%>
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default"><%= link_to 'Manage Admins/Users ', users_path %></button>
+      </div>
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default"><%= link_to 'Manage Books ', books_path %></button>
+      </div>
+  <%end%>
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default"><%= link_to "Sign out", signout_path%></button>
+  </div>
+  </div>
+<h1>Enter new details</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @user %> |
-<% if isadmin %>
-    <%= link_to 'Back', users_path %>
-<% else %>
-    <%= link_to 'Home', home_index_path %>
-<% end %>
