--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,26 @@
-<h1 id="notice"><%= notice %></h1>
+
+<div class="btn-group btn-group-justified" role="group" aria-label="...">
+
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default"><%= link_to 'Home ', home_index_path %></button>
+  </div>
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default"><%= link_to 'View/Edit Profile ', edit_user_path(@user) %></button>
+  </div>
+  <%if isadmin%>
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default"><%= link_to 'Manage Admins/Users ', users_path %></button>
+      </div>
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default"><%= link_to 'Manage Books ', books_path %></button>
+      </div>
+  <%end%>
+  <div class="btn-group" role="group">
+    <button type="button" class="btn btn-default"><%= link_to "Sign out", signout_path%></button>
+  </div>
+</div>
+
+<h3 id="notice"><%= notice %></h3>
 
 <p>
   <strong>Email:</strong>
