--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -45,9 +45,9 @@
 
 <% if !isadmin %>
 
-<h1>Books Checked Out</h1>
+<h3>Books Checked Out</h3>
 
-<table>
+<table class="table">
   <thead>
     <tr>
       <th>Isbn</th>
