--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,16 +10,16 @@
 
 <h1>Listing Books</h1>
 
-<table>
+<table class="table">
   <thead>
     <tr>
-      <th>Id</th>
-      <th>Isbn</th>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Author</th>
-      <th>Checked out to</th>
-      <th>Status</th>
+      <th><b>Id</b></th>
+      <th><b>Isbn</b></th>
+      <th><b>Title</b></th>
+      <th><b>Description</b></th>
+      <th><b>Author</b></th>
+      <th><b>Checked out to</b></th>
+      <th><b>Status</b></th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -46,10 +46,10 @@
         <!td><!%= button_to 'Checkout', checkout_path %><!/td>
         <!%= link_to 'Checkout', new_book_path, new_book_path(:book = {:isbn = @book.isbn})%>
         <!td><!%= form_tag("/checkout", method: "get") do %> <!%= label(:book, :isbn) %> <!%= submit_tag("Check Out") %><!/td> <!% end %>
-        <td><%= link_to 'Show', book %></td>
-        <td><% if isadmin %><%= link_to 'Edit', edit_book_path(book) %><% end %></td>
-        <td><% if isadmin %><%= link_to 'Delete', book, method: :delete, data: { confirm: 'Are you sure?' } %><% end %></td>
-        <td><% if isadmin %><%= link_to 'Checkout History', checkout_history_book_path(book.isbn) %><% end %></td>
+        <td><%= link_to 'Show', book, :style=>"color:#0000FF" %></td>
+        <td><% if isadmin %><%= link_to 'Edit', edit_book_path(book), :style=>"color:#0000FF" %><% end %></td>
+        <td><% if isadmin %><%= link_to 'Delete', book, method: :delete, data: { confirm: 'Are you sure?' }, :style=>"color:#0000FF" %><% end %></td>
+        <td><% if isadmin %><%= link_to 'Checkout History', checkout_history_book_path(book.isbn), :style=>"color:#0000FF" %><% end %></td>
 
       </tr>
     <% end %>
@@ -58,7 +58,7 @@
 
 <!br>
 <% if isadmin %>
-<%= link_to 'New Book', new_book_path %> | 
-<% end %>
-<%= link_to 'Back', '/' %>
-    </div>
+      <button type="button" class="btn"><%= link_to 'New Book', new_book_path %></button>
+  <% end %>
+  <button type="button" class="btn"><%= link_to 'Back', home_index_path%></button>
+</div>
