--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,27 +1,7 @@
-
-<div class="btn-group btn-group-justified" role="group" aria-label="...">
-
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default"><%= link_to 'Home ', home_index_path %></button>
-  </div>
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default"><%= link_to 'View/Edit Profile ', edit_user_path(@user) %></button>
-  </div>
-  <%if isadmin%>
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default"><%= link_to 'Manage Admins/Users ', users_path %></button>
-      </div>
-      <div class="btn-group" role="group">
-        <button type="button" class="btn btn-default"><%= link_to 'Manage Books ', books_path %></button>
-      </div>
-  <%end%>
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default"><%= link_to "Sign out", signout_path%></button>
-  </div>
-</div>
-
+<div class="container" align="center">
+  <br><br>
 <h3 id="notice"><%= notice %></h3>
-
+<br><br>
 <p>
   <strong>Email:</strong>
   <%= @user.email %>
@@ -44,7 +24,9 @@
 
 <!%= link_to 'Edit', edit_user_path(@user) %>
 <% if isadmin%>
-<%= link_to 'Back', users_path %>
+      <button type="button" class="btn"> <%= link_to 'Back', users_path %></button>
 <% else %>
-<%= link_to 'Home', home_index_path %>
+      <button type="button" class="btn"> <%= link_to 'sign in', home_index_path %></button>
+
 <%end%>
+    </div>
