one link left that done

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -40,7 +40,7 @@
   <form action="/search" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
     <!%= label_tag(:query, "Search for:") %>
     <input type="text" name="search" id="search" class="textbox1"/>
-    <input type="submit" name="commit" value="Search" />
+    <input type="submit" class="btn" name="commit" value="Search" />
   </form>
 
 <% if !isadmin %>
