--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,8 @@
 
 <header class="header">
   <div class="container">
-   <h1>Library</h1>
+   <h1>TZN Library</h1>
+    <marquee>Welcome to the library. For any help please contact help@tzn.com</marquee>
   </div>
 </header>
 <body background="http://static.tumblr.com/bf4c92b6b9b217d3cf76e8ca51aefc00/xyrewae/rCRmvhg5w/tumblr_static_library-background4.jpg">
