--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,11 +8,6 @@
   <div class="btn-group" role="group">
     <button type="button" class="btn btn-default"><%= link_to 'View/Edit Profile ', edit_user_path(@user) %></button>
   </div>
-  <% if !isadmin%>
-  <div class="btn-group" role="group">
-    <button type="button" class="btn btn-default"><%= link_to 'Recommend a book ', recommend_new_path(@user) %></button>
-  </div>
-  <% end %>
   <%if isadmin%>
       <div class="btn-group" role="group">
         <button type="button" class="btn btn-default"><%= link_to 'Manage Admins/Users ', users_path %></button>
@@ -20,27 +15,35 @@
       <div class="btn-group" role="group">
         <button type="button" class="btn btn-default"><%= link_to 'Manage Books ', books_path %></button>
       </div>
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default"><%= link_to 'Book Recommendations ', rec_books_path %></button>
+      </div>
+  <%end%>
+  <%if !isadmin%>
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default"><%= link_to 'Recommend Book', new_rec_book_url %></button>
+      </div>
   <%end%>
   <div class="btn-group" role="group">
     <button type="button" class="btn btn-default"><%= link_to "Sign out", signout_path%></button>
   </div>
 </div>
-  <div class ="container" align="center">
+<div class ="container" align="center">
 
-<h3 align="left">Welcome
-<%=session[:user]['email']%>
-<%=session[:password]%>
-</h3>
-<h2></h2>
+  <h3 align="left">Welcome
+    <%=session[:user]['email']%>
+    <%=session[:password]%>
+  </h3>
+  <h2></h2>
 
-<p>Enter the book name/ isbn/ author to serach the book</p>
+  <p>Enter the book name/ isbn/ author to serach the book</p>
   <!%= form_for :search, url: search_path do |f| %>
   <!p>
-    <!%= f.text_field :search %>
-    <!%= submit_tag "search", :name = nil %>
-    <!%= f.submit "search", class: "btn btn-large btn-primary" %>
+  <!%= f.text_field :search %>
+  <!%= submit_tag "search", :name = nil %>
+  <!%= f.submit "search", class: "btn btn-large btn-primary" %>
   <!/p>
-<!% end %>
+  <!% end %>
 
   <form action="/search" accept-charset="UTF-8" method="get"><input name="utf8" type="hidden" value="&#x2713;" />
     <!%= label_tag(:query, "Search for:") %>
@@ -48,32 +51,33 @@
     <input type="submit" class="btn" name="commit" value="Search" />
   </form>
 
-<% if !isadmin %>
+  <% if !isadmin %>
 
-<h3>Books Checked Out</h3>
+      <h3>Books Checked Out</h3>
 
-<table class="table">
-  <thead>
-    <tr>
-      <th>Isbn</th>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Author</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+      <table class="table">
+        <thead>
+        <tr>
+          <th>Isbn</th>
+          <th>Title</th>
+          <th>Description</th>
+          <th>Author</th>
+          <th colspan="3"></th>
+        </tr>
+        </thead>
 
-  <tbody>
-    <% @books.each do |book| %>
-      <tr>
-        <td><%= book.isbn %></td>
-        <td><%= book.title %></td>
-        <td><%= book.description %></td>
-        <td><%= book.author %></td>
-        <td><%= link_to 'Return', book %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+        <tbody>
+        <% @books.each do |book| %>
+            <tr>
+              <td><%= book.isbn %></td>
+              <td><%= book.title %></td>
+              <td><%= book.description %></td>
+              <td><%= book.author %></td>
+              <td><%= link_to 'Return', book %></td>
+            </tr>
+        <% end %>
+        </tbody>
+      </table>
   <%end%>
-    </div>
+
+</div>
