--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -73,7 +73,7 @@
               <td><%= book.title %></td>
               <td><%= book.description %></td>
               <td><%= book.author %></td>
-              <td><%= link_to 'Return', book %></td>
+              <td><%= link_to 'Return', book, :style=>"color:#ff0000"%></td>
             </tr>
         <% end %>
         </tbody>
